# xMate7p_dyn_ident

./: README.md  conda_sousa.yaml  xMate7_id.yaml  xMate7p Dynamic Parameter Identification V0.ipynb  xMate7p Dynamic Parameter Identification V1-1000.ipynb  xMate7p Dynamic Parameter Identification V1-50.ipynb  xMate7p Dynamic Parameter Identification.html  xMate7p Dynamic Parameter Identification.ipynb  xMate7p_robot_iden.yaml
.ipynb_checkpoints/: ur10 Dynamic Parameter Identification (copy)-checkpoint.ipynb  ur10 Dynamic Parameter Identification-checkpoint.ipynb  xMate7p Dynamic Parameter Identification V1-1000-checkpoint.ipynb  xMate7p Dynamic Parameter Identification V1-50-checkpoint.ipynb  xMate7p Dynamic Parameter Identification V1-500-checkpoint.ipynb  xMate7p Dynamic Parameter Identification V1-checkpoint.ipynb  xMate7p Dynamic Parameter Identification-checkpoint.ipynb
data/recdata/: xMate7p_traj1_results.csv  xMate7p_traj2_results.csv  xMate7p_traj3_results.csv  xMate7p_traj4_results.csv
data/trajectories/: opt_x.npy  opt_x.txt  xMate7p.csv  xMate7p.pkl
interfaces/: CMakeLists.txt  compute_torque.cpp  compute_torque.h  robotiden.py
support_funcs/: regr_data_proc.py
tmp/procdata/: traj1_proc.npz  traj1_raw.npz  traj1_regr.npz  traj2_proc.npz  traj2_raw.npz  traj2_regr.npz  traj3_proc.npz  traj3_raw.npz  traj3_regr.npz  traj4_proc.npz  traj4_raw.npz
tmp/robotmodels/: xMate7p.pkl
tmp/sdpa_dat/: csdp.out  dsdp5.out  results-dsdp-5.8  sdp.dat-s  sdpa_input.dat-s
trajectory_optimization/: fourier_traj.py  traj_optimizer.py  traj_plotter.py
(+11 files in other folders)
